--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   </head>
   <body>
     <div id="app"></div>
+
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase-auth.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyDzZ_jA8jPDvtsyWxjffMYDsNQKQqkP5nA",
+        authDomain: "instaresume-49869.firebaseapp.com",
+        databaseURL: "https://instaresume-49869.firebaseio.com",
+        storageBucket: "instaresume-49869.appspot.com",
+        messagingSenderId: "548895619638"
+      };
+      firebase.initializeApp(config);
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
