--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase-database.js"></script>
     <script>
       // Initialize Firebase
       var config = {
